accordion-download fixed content text alignment

--- a/blocks/accordion-download/accordion-download.css
+++ b/blocks/accordion-download/accordion-download.css
@@ -139,6 +139,7 @@
 
           & .label {
             display: flex;
+            align-items: center;
             align-self: stretch;
             flex: 1 0 0;
             color: var(--Accordion-Accordion-Download-Accordion-Tile-Title, #001C35);
